# ferris_lab

./: Cargo.toml  LICENSE
assets/: ferris2.0.json  labyrinth.ldtk  labyrinth2.ldtk
src/: camera.rs  lib.rs  main.rs  spritesheet.rs  texture.rs
