[package]
name = "ferris_lab"
version = "0.1.0"
authors = ["Simon A. Berger <simberger@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_ecs_ldtk = { version = "0.3" }
bevy_ecs_tilemap = { version = "0.6" }
bevy = { version = "0.7" }
pathfinding = "^3"
anyhow = { version = "^1" }
rand = "^0.8"
env_logger = "^0.9"
serde = { version = "^1", features = ["derive"] }
serde_json = { version = "^1" }
ldtk_rust = "0.6"
